# machine_perception

./: .gitignore  README.md  helloworld.py  test.py
demo1_tello_aruco/: .gitignore  README.md
demo1_tello_aruco/cv_aruco/: Pose.py  aruco_detection.py  aruco_detection_py.py  aruco_detection_tello.py  camera_config.py  camera_config_tello.py  main.py  tello_controller.py  tello_flight.py  test.py  test_multi_thread.py  trajectory.py
demo1_tello_aruco/hardware/: trajectory_planning.gh  trajectory_planning.txt
demo2.1_detect_polygon/: README.md
demo2.1_detect_polygon/detection_dual/: .gitignore  CMakeLists.txt
demo2.1_detect_polygon/detection_dual/dual640x480/: dual640x480.txt
demo2.1_detect_polygon/detection_dual/hardware/: geometry2json.gh  library.json  piece2d_with_code.stl  pieces.3dm  pieces_2d.stl
demo2.1_detect_polygon/detection_dual/lib/: CMakeLists.txt  CameraConfig.cpp  CameraConfig.hpp  Pose.cpp  Pose.hpp  cameraConfig.cpp  detection.cpp  detection.hpp  matching.cpp  matching.hpp
demo2.1_detect_polygon/detection_dual/src/: CMakeLists.txt  main.cpp  main.h  main.hpp
demo2.2_detect_cylinder/: README.md
demo2.2_detect_cylinder/detection_2.0/: CMakeLists.txt  clean_cloud.cpp  downsample.cpp  ransac.cpp  registerClouds.cpp  takeFrameRealsense.cpp
demo2.2_detect_cylinder/detection_2.0/result/: bamboo2cut  cloud_downsampled.pcd
demo2.2_detect_cylinder/detection_rgbd/: CMakeLists.txt
demo2.2_detect_cylinder/detection_rgbd/data/point_cloud/: cloud1_alignedB.pcd  cloud_0.pcd  cloud_cylinder.pcd  cloud_cylinder.txt  cloud_cylinder_detected00.pcd  cloud_cylinder_detected_rest.pcd  cloud_cylinder_test01.pcd  cloud_f.pcd  cylinder_params.txt  log.txt  point_params.txt  points.txt  visualization.gh
demo2.2_detect_cylinder/detection_rgbd/lib/: CMakeLists.txt  kinect.cpp  kinect.hpp  pointCloud.cpp  pointCloud.hpp  pose.cpp  pose.hpp  vision.cpp  vision.hpp
demo2.2_detect_cylinder/detection_rgbd/src/: CMakeLists.txt  fitting.cpp  getCameraIntrincs.cpp  main.cpp  mergeCloud.cpp  segmentCloud.cpp  takeFrameKinect.cpp  takeFrameRealsense.cpp
demo2.2_detect_cylinder/end_effector/: end_effector.3dm
demo2.2_detect_cylinder/hand_eye_calib/: CMakeLists.txt  detect_chessboard.cpp  detect_marker.cpp  hand_eye_calib.cpp  hand_eye_calib_t.cpp
demo2.2_detect_cylinder/hand_eye_calib/fake_data/: fake_data.txt  fakedata.gh  ground_truth.txt
demo2.2_detect_cylinder/hand_eye_calib/matrix_trans_basic/: matrix_transformation.gh
demo2.2_detect_cylinder/hand_eye_calib/real_data/: data_200217.txt  result_200217.txt  robot_param.txt
demo2.2_detect_cylinder/hand_eye_calib/real_data/data_200217/: result_200217.txt
demo2.2_detect_cylinder/hand_eye_calib/real_data/data_200219/: data_c2o_110.txt  data_c2o_200219.txt  data_c2o_80.txt  data_merged.txt  data_w2e_0-50.txt  data_w2e_110.txt  data_w2e_200219.txt  data_w2e_51-79.txt  data_w2e_80.txt  result_200219.txt
demo3.1_validate_in_process_scan/: .gitignore  README.md
demo3.1_validate_in_process_scan/detection/: CMakeLists.txt  clean_cloud.cpp  combine_cloud.cpp  construct3D.cpp  construct3D_average.cpp  downsample.cpp  fitting.cpp  fitting_fixed_radius.cpp  level_chessboard.cpp  level_circleboard.cpp  passthrough.cpp  ransac.cpp  registerClouds.cpp  registerExt.cpp  takeFrame2D.cpp
demo3.1_validate_in_process_scan/detection/construct3D_built/: construct3D_built.cpp  construct3D_built.hpp  construct3D_mouse.cpp  cylinder_params.txt  cylinder_params_1.txt  cylinder_params_2.txt
demo3.1_validate_in_process_scan/detection/result/: performance.md
demo3.1_validate_in_process_scan/physical_setup/: setup.3dm
demo4.1_tracking/: .gitignore  README.md
demo4.1_tracking/gh/: load_robot_base.gh  matrix_funcs.gh
demo4.1_tracking/helping_devive/: note.txt
demo4.1_tracking/opt/: main.py  result.txt  result_visualization.gh
demo4.1_tracking/physical_setup/: a_assembly.3dm  get_cylinder_param.gh
demo4.1_tracking/physical_setup_final/: 20200901.3dm  connector.gh
demo4.1_tracking/physical_setup_tree/: adaption.gh  connector.gh  cylinder_key_region.txt  cylinder_params.txt  demo_tree_structure_0625.3dm  distance_between_lines.gh  get_cylinder_param.gh
demo4.1_tracking/tracking/: CMakeLists.txt  demo_a_assembly.cpp  main.cpp  take_video.cpp
demo4.1_tracking/tracking/config/: cylinder_params.txt
demo4.1_tracking/web/: note.md
demo5.1_final/: .gitignore  README.md
demo5.1_final/adaptation/: adapt.py
demo5.1_final/detection/: CMakeLists.txt
demo5.1_final/detection/app/: CMakeLists.txt  assemble.cpp  detect.cpp  detect_ext.cpp  take_frame.cpp
demo5.1_final/detection/config/: config_assemble.yml  config_camera.yml  config_det.yml  config_take_frame.yml
demo5.1_final/detection/lib/: CMakeLists.txt  lib_det.cpp  lib_geometry.cpp  lib_rs.cpp  lib_rs.hpp  utility.cpp
demo5.1_final/detection/lib/header/: lib_camera.hpp  lib_det.hpp  lib_geometry.hpp  lib_rs.hpp  utility.hpp
demo5.1_final/detection/src/: CMakeLists.txt  take_frame.cpp
demo5.1_final/gh/: design.txt  design_seg.txt  design_targets.txt  load_cloud.gh  load_marker.gh  visualization.gh
demo5.1_final/localization_and_mapping/: .gitignore
design/: .gitignore  README.md  design_master.3dm  design_table_substructure_20200213.3dm
design/design_bf/: Robolab.3dm  Spindle-6kW.3dm  bamboo_structure.3dm  connection.3dm  description.txt  design_bf.gh  milling777.3dm  milling777.gh  milling_tool_path.3dm  milling_tool_path.gh  milling_tool_path_robolab_20200201.gh  milling_tool_path_robolab_20200203.gh
design/design_ts/: description.txt  design_ts.3dm  fab_ts.3dm  fab_ts.gh
design/tolerance_study/: fit_pieces.py  tolerance_study.3dm  tolerance_study.gh
testbranch/: mybranch.c
workshop/: README.md
workshop/Clustering/: k_means.py
workshop/DNN_classification/: .gitignore  NeuralNetwork.py  funcs.py  main.py
workshop/DNN_pytorch/: .gitignore  classification.py
workshop/FCN_classification/: main.py
workshop/FCN_regression/: main.py
workshop/SVM/: .gitignore  hard_margin.py  kernel_trick.py  mnist.py  mnist_result.txt  mnist_scilearn.py  (+2 more)
(+78 files in other folders)
